[454902] Configure new test suites for gerrit.
Bug: 454902
Change-Id: I05b04b43efa0c4c8ac304c2043d38755c94521a5
Signed-off-by: Florian Barbin <florian.barbin@obeo.fr>