@@ -137,6 +137,18 @@
         <tests.vmargs>${tests.vmargs.mac} -Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</tests.vmargs>
       </properties>
     </profile>
+     <profile>
+      <id>gerrit-junit</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <tests.junit.skip>false</tests.junit.skip>
+        <tests.timeout>${tests.timeout.junit}</tests.timeout>
+        <tests.junit.include>%regex[org/eclipse/sirius/tests/suite/(tree/AllSiriusTestSuite|GerritJUnitSuite)\.class]</tests.junit.include>
+        <tests.vmargs>${tests.vmargs.mac} -Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</tests.vmargs>
+      </properties>
+    </profile>
     <profile>
       <id>swtbot</id>
       <activation>
@@ -174,6 +186,18 @@
       </properties>
     </profile>
     <profile>
+      <id>gerrit-swtbot</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <tests.swtbot.skip>false</tests.swtbot.skip>
+        <tests.timeout>${tests.timeout.swtbot}</tests.timeout>
+        <tests.swtbot.include>org/eclipse/sirius/tests/swtbot/suite/GerritSWTBotSuite.class</tests.swtbot.include>
+        <tests.vmargs>${tests.vmargs.mac} -Xmx2048m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</tests.vmargs>
+      </properties>
+    </profile>
+    <profile>
       <id>swtbot-sequence</id>
       <activation>
         <activeByDefault>false</activeByDefault>
@@ -182,6 +206,18 @@
         <tests.swtbot.skip>false</tests.swtbot.skip>
         <tests.timeout>${tests.timeout.swtbot-sequence}</tests.timeout>
         <tests.swtbot-sequence.include>org/eclipse/sirius/tests/swtbot/suite/SequenceSwtBotTestSuite.class</tests.swtbot-sequence.include>
+        <tests.vmargs>${tests.vmargs.mac} -Xmx2048m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</tests.vmargs>
+      </properties>
+    </profile>
+    <profile>
+      <id>gerrit-swtbot-sequence</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <properties>
+        <tests.swtbot.skip>false</tests.swtbot.skip>
+        <tests.timeout>${tests.timeout.swtbot-sequence}</tests.timeout>
+        <tests.swtbot-sequence.include>org/eclipse/sirius/tests/swtbot/suite/GerritSequenceSWTBotSuite.class</tests.swtbot-sequence.include>
         <tests.vmargs>${tests.vmargs.mac} -Xmx2048m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</tests.vmargs>
       </properties>
     </profile>
